--- a/contact/index.html
+++ b/contact/index.html
@@ -14,9 +14,8 @@
 <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#1e88e5">
 <link rel="shortcut icon" href="/images/favicons/favicon.ico">
 <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
-<meta name="theme-color" content="#1e88e5">
 
-    
+    <meta name="theme-color" content="#fb8c00">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="/dist/css/app.fbc41fc4145dcb35554b8b4c56ccb3cf.css">
     <script defer src="/dist/js/app.4e97c66850dfc393c34d.js"></script>
