--- a/imprint/index.html
+++ b/imprint/index.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" href="/images/favicons/favicon.ico">
 <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
 
-    <meta name="theme-color" content="#ffca28">
+    <meta name="theme-color" content="#ececec">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="/dist/css/app.fbc41fc4145dcb35554b8b4c56ccb3cf.css">
     <script defer src="/dist/js/app.4e97c66850dfc393c34d.js"></script>
